--- a/src/app/canvas/components/business-strategy-card/business-strategy-card.component.css
+++ b/src/app/canvas/components/business-strategy-card/business-strategy-card.component.css
@@ -34,30 +34,49 @@
     
   }
   
-   .strategy-card-footer{
+  .strategy-card-footer{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     font-size: 17px;
   }
   
- 
-
   
-  .flex-right {
+.footer-right {
+    width: 50%;
+    /* background: #1d1fa1; */
+}
+
+.footer-left {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    /* background: #38a738; */
+}
+
+.flex-right {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-  }
-  
-  .flex-right > a {
+    /* background-color: blue; */
+}
+
+.flex-right > a {
     padding-left: 10px;
-  }
+}
   
   .points-dividing-hr {
     width:50%;
     margin:0 auto;
   }
+
+  .nav-icon {
+    font-size: 30px;
+    vertical-align: bottom;
+    padding-right: 10px;
+    cursor: pointer;
+}
   
   
   
