--- a/src/app/canvas/components/display/display.component.css
+++ b/src/app/canvas/components/display/display.component.css
@@ -6,6 +6,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     max-width: 300px;
+    margin: 5px;
 
 }
 
@@ -40,17 +41,29 @@
     flex-direction: row;
     justify-content: flex-start;
     font-size: 17px;
+  }
+  
+  
+.footer-right {
+    width: 50%;
+    /* background: #1d1fa1; */
 }
-  
- 
 
-  
+.footer-left {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    /* background: #38a738; */
+}
+
 .flex-right {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    /* background-color: blue; */
 }
-  
+
 .flex-right > a {
     padding-left: 10px;
 }
@@ -82,7 +95,16 @@
     font-size: 30px;
     vertical-align: bottom;
     padding-right: 10px;
-  }
+    cursor: pointer;
+}
+
+.icon-activated {
+    color: yellow;
+}
+
+.icon-deactivated {
+    color: black;
+}
   
   
   
