--- a/src/app/canvas/components/table-general/table-general.component.css
+++ b/src/app/canvas/components/table-general/table-general.component.css
@@ -1,16 +1,16 @@
 .canvas-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1em;
+    /* grid-gap: 1em; */
     grid-template-rows: 1fr 1fr 1fr;
+    /* grid-auto-rows: 1fr; */
+    background-color: blue;
 }
 
 /*  GO Two Colum BELOW 480 PIXELS */
 /* @media only screen and (max-width: 1000px) {
 
 } */
-
-
 
 @media only screen and (max-width: 1279px) {
     /* For desktop: */
