--- a/src/app/canvas/components/canvas-card/canvas-card.component.css
+++ b/src/app/canvas/components/canvas-card/canvas-card.component.css
@@ -6,7 +6,8 @@
   min-width: 400px;
   max-height: 500px;
   min-height: 500px; */
-  background-color: blueviolet;
+  
+  /* background-color: blueviolet; */
 }
 
 .canvas-card:hover {
