--- a/src/app/canvas/components/table-general/table-general.component.css
+++ b/src/app/canvas/components/table-general/table-general.component.css
@@ -1,10 +1,11 @@
 .canvas-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    /* grid-gap: 1em; */
+    grid-gap: 1em;
     grid-template-rows: 1fr 1fr 1fr;
     /* grid-auto-rows: 1fr; */
-    background-color: blue;
+
+    /* background-color: blue; */
 }
 
 /*  GO Two Colum BELOW 480 PIXELS */
